deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: beer
  name: beer
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: beer
  sessionAffinity: None
  type: ClusterIP
